fix: image not visible

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -1,5 +1,5 @@
 body {
-  background-image: url("/assets/images/image.png");
+  background-image: url("/assets/image.png");
   background-position: center;
   background-size: 75%;
 }
